--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "16.5.0",
-    "react-native": "0.57.1",
+    "react": "16.4.1",
+    "react-native": "0.56.1",
     "react-native-navigation": "^2.0.2556",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.1.2",
+    "@babel/code-frame": "7.0.0",
+    "@babel/generator": "7.1.2",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.45.6",
     "react-test-renderer": "16.5.0"
   },
   "jest": {
