--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "react": "16.4.1",
     "react-native": "0.56.1",
+    "react-native-config": "^0.11.5",
     "react-native-navigation": "^2.0.2556",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
