--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-navigation": "^2.0.2556",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
